--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "the project implemented for my first level degree thesis",
   "main": "./src/api/blockchainAPi.js",
+  "type": "module",
   "scripts": {
     "start-blockchain": "npx hardhat node",
     "start-server": "nodemon --inspect ./src/api/blockchainAPi.js"
@@ -10,8 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/formbody": "^8.0.1",
     "@fastify/multipart": "^9.0.1",
+    "@helia/dag-json": "^4.0.1",
+    "@helia/http": "^2.0.2",
+    "@helia/unixfs": "^4.0.1",
     "ethers": "^6.13.4",
-    "fastify": "^5.1.0"
+    "fastify": "^5.1.0",
+    "hardhat": "^2.22.17",
+    "helia": "^5.1.1"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   }
 }
