--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@helia/dag-json": "^4.0.1",
     "@helia/http": "^2.0.2",
     "@helia/unixfs": "^4.0.1",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.13.4",
     "fastify": "^5.1.0",
     "hardhat": "^2.22.17",
