--- a/.gitignore
+++ b/.gitignore
@@ -165,7 +165,9 @@ cython_debug/
 .vscode/
 
 # splitted dataset e saved on file
-data/
-
+*.pth
+*.pickle
+data/tmp
+data/torchDownload
 node_modules/
 cache/
