--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@helia/unixfs": "^4.0.1",
     "crypto-js": "^4.2.0",
     "ethers": "^6.13.4",
+    "ethers-decode-error": "^2.1.3",
     "fastify": "^5.1.0",
     "hardhat": "^2.22.17",
     "helia": "^5.1.1"
